Definir política de segurança para RMI
Permitir que seja possível acessar o rmi de outra máquina através da porta.